# aoc-melange

./: Makefile  README.md  bsconfig.json  dune-project  package-lock.json  package.json
data/2022/: day06test.txt
public/: GraphVisualization.html
src/: ReludeBastetSadness.re  Year2022Day01Part1.re
src/2022/: Day01.re  Day01Part1.re  Day02.re  Day03.re  Day03Part1.re  Day03Part2.re  Day04.re  Day05.re  Day06.re  Day07.re  Day08.re  Day09.re
src/2022/Day09/: Day09.re  Day09Sandbox.re  Graph.re  GraphVisualization.re  Position.re  Translation.re
src/shared/: Shared.re  Shared_Array.re  Shared_Array.rei  Shared_File.re  Shared_File.rei  Shared_IO.re  Shared_IO.rei  Shared_List.re  Shared_List.rei  Shared_Log.re  Shared_Log.rei
